--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
-
+:root{
+  background-color: darkorange;
+}
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   min-width: 320px;
   min-height: 100vh;
   background-color: darkorange;
@@ -104,7 +106,7 @@ button:hover{
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: darkorange;
   }
   a:hover {
     color: #747bff;
@@ -113,3 +115,37 @@ button:hover{
     background-color: #f9f9f9;
   }
 }
+
+.StudentsAttendance{
+  margin: auto;
+  margin-top: 10vh;
+  padding-top: 8%;
+  padding-bottom: 8%;
+  width: 50%;
+  text-align: center;
+  justify-content: space-around;
+  background-color: #f9f9f9c2;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
+  border-radius: 10px;
+}
+
+.StudentsAttendance ul{
+  list-style-type: none;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: large;
+  opacity: 1;
+}
+.StudentsAttendance ul li{
+  padding-bottom: 20px;
+}
+.green{
+  color: greenyellow;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px blueviolet;
+}
+.red{
+  color: crimson;
+  font-weight: bold;
+  text-shadow: 1px 1px #fff;
+}
+
